[BUGFIX] footer shifted down on error page

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -121,7 +121,7 @@ body {
   padding-bottom:10px;
 }
 .l0{ /*container*/
-  min-height: 250px;padding-top: 1em;padding-bottom: 0.1em;padding-right: 3%;padding-left: 3%;
+  min-height: 650px;padding-top: 1em;padding-bottom: 0.1em;padding-right: 3%;padding-left: 3%;
 }
 .l1{
   min-height: 650px;padding-top: 4em;padding-bottom: 2em;padding-right: 1.5%;padding-left: 1.5%;
